Updates home page text to be more current

--- a/views/index.jade
+++ b/views/index.jade
@@ -16,7 +16,8 @@ h1 Welcome to Beer &amp;&amp; Code Seattle
     li I don't have anything to work on. Should I come? 
       span.faq_answer Yes! (we'll find you something)                
   p At the risk of sounding repetitive, Beer &amp;&amp; Code is for <strong>anyone</strong>.
-  p We meet at 7 pm and our location changes every few months.
+  p We meet at 7 pm at two locations in Seattle. Each location meets every two weeks.
+  p Check the <a href="/calendar">Calendar</a> to find a location or day that works for you.
   p We like beer. We like code. We like people. Come hang out with us.
   p If you're still interested in learning more, feel free to get in touch with us.
   p Check out our 
