--- a/views/people.jade
+++ b/views/people.jade
@@ -15,15 +15,10 @@ h1 People
             span(class="type github") github: 
             span.value
               a(href="https://github.com/" + person.github, target="_blank").url= person.github
-        - if (person.github2)
-          li
-            span.uri
-              span(class="type github") github: 
-              span.value
-                a(href="https://github.com/" + person.github2, target="_blank").url= person.github2
         li
           span.uri
             span(class="type twitter") twitter: 
-            span.value
-              a(href="http://twitter.com/" + person.twitter, target="_blank").url @#{person.twitter}
+            - if(person.twitter)
+              span.value
+                a(href="http://twitter.com/" + person.twitter, target="_blank").url @#{person.twitter}
   br(style="clear: left;")
